# dsp

./: .gitignore  Makefile  README.md  _blobtimes.txt  bird_1.h  checkpt3.txt  cla  cla.c  class  classifier  classifier.c  classifier.ino  classifier.py  classifier16k.py  classifier_temp.py  combine.py  derivative.py  don.ino  donut.ino  f2.txt  filtered_data_c.txt  filtered_intensity_c.txt  midpoints.py  pcm_to_wav.py  scrub_jay_detector  segs1.txt  segs2.txt  spectrogram.py  wav_to_pcm.py  win.txt  window.txt
2fa/: cepstrum_kws.py  (+2 more)
2fa/audio/: CMakeLists.txt  adapt_ubm.py  audio_classifier_model.keras  audio_driver.py  dump.py  evaluate_gmm.py  evaluation_report.txt  keyword_classifier.py  model.joblib  normalize_data.py  open_keyword_classifier.py  scaler_mean.npy  scaler_scale.npy  train_gmm.py
2fa/audio/data/neg/: bed__common_voice_en_15060872.opus  bed__common_voice_en_17270710.opus  bed__common_voice_en_17867826.opus  bed__common_voice_en_18573418.opus  bed__common_voice_en_19773674.opus  bird__common_voice_en_17705636.opus  bird__common_voice_en_18451159 2.opus  bird__common_voice_en_19043288 2.opus  cat__common_voice_en_126247.opus  cat__common_voice_en_17265772 2.opus  cat__common_voice_en_17636323 2.opus  cat__common_voice_en_17890192.opus  cat__common_voice_en_18121560 2.opus  dog__common_voice_en_116675 2.opus  dog__common_voice_en_153085__2.opus  dog__common_voice_en_17147477.opus  dog__common_voice_en_17384785.opus  dog__common_voice_en_17802062.opus  dog__common_voice_en_17969592.opus  dog__common_voice_en_18157252 2.opus  dog__common_voice_en_18448265.opus  dog__common_voice_en_18851719.opus  dog__common_voice_en_19691473.opus  down__common_voice_en_10208974.opus  down__common_voice_en_110659.opus  down__common_voice_en_11829.opus  down__common_voice_en_12650258.opus  down__common_voice_en_134791.opus  down__common_voice_en_144007 2.opus  down__common_voice_en_151757.opus  down__common_voice_en_15735651.opus  down__common_voice_en_162099.opus  down__common_voice_en_168051.opus  down__common_voice_en_17249712.opus  down__common_voice_en_17261109.opus  down__common_voice_en_17272081.opus  down__common_voice_en_17283822.opus  down__common_voice_en_17330647 2.opus  down__common_voice_en_17389708.opus  down__common_voice_en_17452947.opus  (+428 more)
2fa/audio/data/pos/: stop_181574.opus  stop_181917.opus  stop_181940.opus  stop_182703.opus  stop_183498.opus  stop_183591.opus  stop_183688.opus  stop_183813.opus  stop_184397.opus  stop_184477.opus  stop_184744.opus  stop_185183.opus  stop_185503.opus  stop_185798.opus  stop_186463.opus  stop_186869.opus  stop_186939.opus  stop_187040.opus  stop_187105.opus  stop_187180.opus  stop_187200.opus  stop_187312.opus  stop_187836.opus  stop_187916.opus  stop_188619.opus  stop_189198.opus  stop_190082.opus  stop_190533.opus  stop_190717.opus  stop_190960.opus  stop_191462.opus  stop_191486.opus  stop_191725.opus  stop_192077.opus  stop_193470.opus  stop_193686.opus  stop_193762.opus  stop_194242.opus  stop_194465.opus  stop_194726.opus  (+435 more)
2fa/audio/data/testing/: bed__common_voice_en_21986795.opus  bed__common_voice_en_504965.opus  bed__common_voice_en_565917 2.opus  bed__common_voice_en_642736.opus  bed__common_voice_en_82827.opus  bird__common_voice_en_20523576.opus  bird__common_voice_en_22180868.opus  bird__common_voice_en_558279.opus  cat__common_voice_en_18526904 2.opus  cat__common_voice_en_19825677 2.opus  cat__common_voice_en_22442314 2.opus  cat__common_voice_en_501894.opus  cat__common_voice_en_62004.opus  dog__common_voice_en_20744334.opus  dog__common_voice_en_21799081.opus  dog__common_voice_en_3297 2.opus  dog__common_voice_en_487615.opus  dog__common_voice_en_505703.opus  dog__common_voice_en_545775.opus  dog__common_voice_en_582708.opus  dog__common_voice_en_609425.opus  dog__common_voice_en_663487.opus  dog__common_voice_en_79549.opus  down__common_voice_en_20309600.opus  down__common_voice_en_20545290.opus  down__common_voice_en_20784134 2.opus  down__common_voice_en_20962990.opus  down__common_voice_en_212777 2.opus  down__common_voice_en_215564 2.opus  down__common_voice_en_21867718.opus  down__common_voice_en_22147005.opus  down__common_voice_en_22708.opus  down__common_voice_en_2910.opus  down__common_voice_en_35200.opus  down__common_voice_en_42184.opus  down__common_voice_en_473718.opus  (+535 more)
2fa/audio/gmm/: adapt_ubm.py  evaluate_gmm.py  gmm_utils.py  train_ubm.py
2fa/audio/models/: audio_classifier_model.keras  gmm_params.inc  keyword_model.pt  scaler_mean.npy  scaler_scale.npy  target_gmm.joblib  threshold.json  ubm_gmm.joblib
2fa/audio/pico-audio/: CMakeLists.txt
2fa/audio/results/: evaluation_report.txt  gmm_results.csv
2fa/audio/speaker/: dump_model.py  evaluate_gmm.py  generate_charts.py  gmm_utils.py  manual_test.py  train_ubm.py
2fa/audio/src/: main.c  speaker_gmm.c  speaker_gmm.h
2fa/audio/word/: keyword_classifier.py
cepstrum/: CMakeLists.txt  cepstrum.py  convert_model.py  run.py  scrubjay_infer.c  scrubjay_svm.joblib  train.py
sync/lib/: CMakeLists.txt  PlainFFT.cpp  PlainFFT.h  classifier.cpp  classifier.h  mpu6050.c  mpu6050.h  ringbuffer.c  ringbuffer.h
(+343 files in other folders)
